# LocalLama

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/: app.rc  config.json
assets/contexts/: Cinematography.txt  Computer graphics.txt  VFX production.txt  VFX terms & jargon.txt
docker/: Dockerfile  build-in-container.sh
docs/: BUILD.md  DEVELOPMENT_RULES.md
runtime/llama/: README.txt
runtime/models/: README.txt
scripts/: build.bat  build.ps1  build.sh  fetch-llama.ps1  fetch-llama.sh  organize.bat  organize.ps1  package.bat  package.ps1  package.sh
src/: LlamaClient.cpp  LlamaClient.h  MainWindow.cpp  MainWindow.h  ServerManager.cpp  ServerManager.h  main.cpp
